--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ h1,h2,h3,h4,h5,h6{
     text-align: center!important;
 }	
 p{
-	text-align: center;
+	margin:0;
 }
 ul{
 	margin:0;
@@ -43,7 +43,7 @@ label{
     font-size: 2em;
     font-weight: 400;
     display: block;
-    text-decoration: none;
+    text-decoration: none!important;
     font-family: 'Oswald', sans-serif;
 }
 .logo span {
@@ -100,8 +100,7 @@ li.ned,li.wrt,li.tol{
     display: block;
 }
 .logo {
-    float: left;
-	 margin-right: 60px;
+    
 }
 .bus {
     float: left;
@@ -114,9 +113,8 @@ li.ned,li.wrt,li.tol{
     letter-spacing: .05em;
 	padding:0 15px;
 }
-.lock {
-    float: right;
-    margin-top: 7px;
+.lock:nth-child(2) {
+    margin-left: auto
 }
 .securetxt {
     color: #1f8dd6;
@@ -1491,7 +1489,7 @@ button.subbtn:focus, button.subbtn:hover {
 /*-- login --*/
 .login-right{
 	float:right;
-	width:100%;
+	width:51%;
 }
 .login-right h3{
     color: #4CB320;
@@ -1571,6 +1569,36 @@ button.subbtn:focus, button.subbtn:hover {
 .login-left ul li a:hover{
 	opacity:.7;
 }
+.login-left ul li a.fb{
+	background:#3b5998;
+}
+.login-left ul li a.goog{
+	background:#dc4e41;
+}
+.login-left ul li a.linkin{
+	background:#00a0dc;
+}
+.login-left ul li a.fb i{
+    background: url(../images/social.png) no-repeat -45px -1px;
+    width: 24px;
+    height: 23px;
+    display: inline-block;
+    vertical-align: text-bottom;
+}
+.login-left ul li a.goog i{
+    background: url(../images/social.png) no-repeat -84px 0px;
+    width: 26px;
+    height: 23px;
+    display: inline-block;
+    vertical-align: text-bottom;
+}
+.login-left ul li a.linkin i{
+    background: url(../images/social.png) no-repeat -3px 0px;
+    width: 25px;
+    height: 23px;
+    display: inline-block;
+    vertical-align: text-bottom;
+}
 /*-- //login --*/
 .privacy h3 {
     color: #34AD00;
@@ -1579,7 +1607,7 @@ button.subbtn:focus, button.subbtn:hover {
     margin-bottom: 1em;
 }
 .privacy {
-    padding: 5em 0;
+    padding-bottom: 10rem;
 }
 .privacy p {
     font-size: 1em;
@@ -4354,10 +4382,18 @@ ul.set-1 {
     -webkit-box-shadow: 0 1px 1px 0 rgba(0,0,0,.1);
     box-shadow: 0 1px 1px 0 rgba(0,0,0,.1);
 }
-.modal-card{
-    width: 400px!important;
+footer
+{
+    width: 100%;
+    bottom: 0;
 }
-.justify-content-center{
-    -ms-flex-pack: center!important;
-    justify-content: center!important;
+textarea
+{
+    resize: none!important;
 }
+.card-flex-text
+{
+    padding: 5px;
+    border: transparent!important;
+}
+
